--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
       <!-- Your content goes here -->
     </div>
   </div>
-
+  
   <div class="flex justify-center pt-10">
     <button class="py-1 px-2 bg-[#02a561] rounded-xl text-white" onclick="generateRandomCard()">Generate Random Chip</button>
   </div>
-
+  
   <div class="flex justify-center gap-2 pl-1 mt-2">
     <div class="w-[400px] h-[100px] bg-white droppable" ondrop="drop(event)" ondragover="allowDrop(event)" id="droppedCards"></div>
   </div>
-
+  
   <div class="flex justify-center pt-3">
     <button class="py-1 px-4 bg-[#02a561] rounded-xl text-white" onclick="showDroppedCards()">Submit</button>
   </div>
+  
+  <div class="flex justify-center mt-3" id="displayDroppedCards"></div>
+  
   
 
   <script src="script.js"></script>
