--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     <button class="py-1 px-4 bg-[#02a561] rounded-xl text-white" onclick="showDroppedCards()">Submit</button>
   </div>
   
-  <div class="flex justify-center mt-3" id="displayDroppedCards"></div>
+<!-- Your existing HTML code remains unchanged -->
+
+<div class="flex justify-center mt-3" id="displayDroppedCards"></div>
+
+
+
   
   
 
